[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naz"
version = "0.1.0"
description = "Security scanning for solo developers"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.24.0",
    "pydantic>=2.12.0",
    "rich>=14.0.0",
]

[project.scripts]
naz = "naz.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
